test/types/records/bad-change-type/init-uses-default.good
init-uses-default.chpl:11: error: Cannot default-initialize a variable with generic type
init-uses-default.chpl:11: note: 'xx' has generic type 'R'
